feat: implement company profile update backend with validation and media handling
- Updated Dockerfile to streamline the build process.
- Enhanced .dockerignore to exclude unnecessary files.
- Introduced OptionKey utility for flexible option matching.
- Added PublicMediaController for serving media files.
- Refined AllowedValues and AllowedValuesValidator for improved validation logic.
- Updated ProfileNormalizer to ensure consistent option handling.
- Modified UpdateCompanyProfileRequest to use standardized benefit identifiers.
- Enhanced API documentation to reflect changes in option handling.
- Added unit tests to cover new functionality and validation rules.